--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,12 +32,12 @@ jobs:
           cd /home/ubuntu
           [ -d DDNDoc ] && rm -rf DDNDoc
           [ -d document-normalizer-docs ] && rm -rf document-normalizer-docs
-          [ -d Docs-Template-Repo ] && rm -rf Docs-Template-Repo
+          [ -d Docs-Template-Repo-Preview ] && rm -rf Docs-Template-Repo-Preview
           [ ! -d DDNDoc ] && mkdir -p DDNDoc
-          git clone --depth 1 --branch preview https://github.com/dynamsoft-docs/document-normalizer-docs.git document-normalizer-docs
-          git clone --depth 1 --branch preview https://github.com/dynamsoft-docs/Docs-Template-Repo.git Docs-Template-Repo
+          git clone --depth 1 https://github.com/dynamsoft-docs/document-normalizer-docs.git document-normalizer-docs
+          git clone --depth 1 --branch preview https://github.com/dynamsoft-docs/Docs-Template-Repo.git Docs-Template-Repo-Preview
           cp -rfp ./document-normalizer-docs/* ./DDNDoc/
-          cp -rfp ./Docs-Template-Repo/* ./DDNDoc/
+          cp -rfp ./Docs-Template-Repo-Preview/* ./DDNDoc/
           cd DDNDoc && bundle exec jekyll build --incremental
 
       - name: Sync files
@@ -63,20 +63,17 @@ jobs:
           cd /home/ubuntu 
           [ -d DDNDocPreview ] && rm -rf DDNDocPreview
           [ -d document-normalizer-docs-preview ] && rm -rf document-normalizer-docs-preview
-          [ -d Docs-Template-Repo-Preview-DCV2 ] && rm -rf Docs-Template-Repo-Preview-DCV2
+          [ -d Docs-Template-Repo-Preview ] && rm -rf Docs-Template-Repo-Preview
           cd /home/ubuntu
 
       - name: Build the site
         run: |
           cd /home/ubuntu
-          [ -d DDNDocPreview ] && rm -rf DDNDocPreview
-          [ -d document-normalizer-docs-preview ] && rm -rf document-normalizer-docs-preview
-          [ -d Docs-Template-Repo-Preview-DCV2 ] && rm -rf Docs-Template-Repo-Preview-DCV2
           [ ! -d DDNDocPreview ] && mkdir -p DDNDocPreview
           git clone --depth 1 --branch preview https://${{ secrets.GIT_USER }}:${{ secrets.GIT_PAT }}@github.com/dynamsoft-docs/document-normalizer-docs.git document-normalizer-docs-preview
-          git clone --depth 1 --branch jenny-preview-branch https://github.com/dynamsoft-docs/Docs-Template-Repo.git Docs-Template-Repo-Preview-DCV2
+          git clone --depth 1 --branch preview https://github.com/dynamsoft-docs/Docs-Template-Repo.git Docs-Template-Repo-Preview
           cp -rfp ./document-normalizer-docs-preview/* ./DDNDocPreview/
-          cp -rfp ./Docs-Template-Repo-Preview-DCV2/* ./DDNDocPreview/
+          cp -rfp ./Docs-Template-Repo-Preview/* ./DDNDocPreview/
           sed -i -e "1,3s/blob\/master$/blob\/preview/" \
           -e "1,3s/blob\/main$/blob\/preview/" /home/ubuntu/DDNDocPreview/_config.yml
           cd DDNDocPreview && bundle exec jekyll build --incremental
