--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,7 +70,7 @@ jobs:
         run: |
           cd /home/ubuntu
           [ ! -d DDNDocPreview ] && mkdir -p DDNDocPreview
-          git clone --depth 1 --branch preview https://${{ secrets.GIT_USER }}:${{ secrets.GIT_PAT }}@github.com/dynamsoft-docs/document-normalizer-docs.git document-normalizer-docs-preview
+          git clone --depth 1 --branch preview https://github.com/dynamsoft-docs/document-normalizer-docs.git document-normalizer-docs-preview
           git clone --depth 1 --branch preview https://github.com/dynamsoft-docs/Docs-Template-Repo.git Docs-Template-Repo-Preview
           cp -rfp ./document-normalizer-docs-preview/* ./DDNDocPreview/
           cp -rfp ./Docs-Template-Repo-Preview/* ./DDNDocPreview/
