--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,79 +18,16 @@ jobs:
   # This workflow contains jobs called "Build-Main" and "Build-Preview"
   Build-Main:
     if: ${{ github.ref == 'refs/heads/main' }}
-    # The type of runner that the job will run on
-    runs-on: self-hosted
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      #- uses: actions/checkout@v2
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          cd /home/ubuntu
-          [ -d DDNDoc ] && rm -rf DDNDoc
-          [ -d document-normalizer-docs ] && rm -rf document-normalizer-docs
-          [ -d Docs-Template-Repo-Preview ] && rm -rf Docs-Template-Repo-Preview
-          [ ! -d DDNDoc ] && mkdir -p DDNDoc
-          git clone --depth 1 https://github.com/dynamsoft-docs/document-normalizer-docs.git document-normalizer-docs
-          git clone --depth 1 --branch preview https://github.com/dynamsoft-docs/Docs-Template-Repo.git Docs-Template-Repo-Preview
-          cp -rfp ./document-normalizer-docs/* ./DDNDoc/
-          cp -rfp ./Docs-Template-Repo-Preview/* ./DDNDoc/
-          cd DDNDoc && bundle install && bundle exec jekyll build
-
-      - name: Sync files
-        uses: SamKirkland/FTP-Deploy-Action@4.3.0
-        with:
-          server: ${{ secrets.FTP_DYNAMSOFT_LOCAL_SERVER }}
-          username: ${{ secrets.FTP_DYNAMSOFT_LOCAL_USER }}
-          password: ${{ secrets.FTP_DYNAMSOFT_LOCAL_PASSWORD }}
-          port: 21 
-          local-dir: /home/ubuntu/DDNDoc/_site/
-          server-dir: /www.dynamsoft.com/document-normalizer/docs/core/
-
-      - name: Trigger Webhook 
-        run: | 
-          curl -X POST -H "${{ secrets.WEBHOOK_USER }}" -H "${{ secrets.WEBHOOK_TOKEN }}" -H "Content-Type: application/json" -d "[\"/document-normalizer/docs/core/*\"]" ${{ secrets.WEBHOOK_URL }}
-
+    uses: dynamsoft-docs/Docs-Template-Repo/.github/workflows/called-workflow-build-sync-production.yml@main
+    with:
+      doc-repo: document-normalizer-docs
+      doc-url: document-normalizer/docs/core
+    secrets: inherit
 
   Build-Preview:
     if: ${{ github.ref == 'refs/heads/preview' }}
-    # The type of runner that the job will run on
-    runs-on: self-hosted
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Runs a set of commands using the runners shell
-      - name: clear space
-        run: |
-          cd /home/ubuntu 
-          [ -d DDNDocPreview ] && rm -rf DDNDocPreview
-          [ -d document-normalizer-docs-preview ] && rm -rf document-normalizer-docs-preview
-          [ -d Docs-Template-Repo-Preview ] && rm -rf Docs-Template-Repo-Preview
-          cd /home/ubuntu
-
-      - name: Build the site
-        run: |
-          cd /home/ubuntu
-          [ ! -d DDNDocPreview ] && mkdir -p DDNDocPreview
-          git clone --depth 1 --branch preview https://github.com/dynamsoft-docs/document-normalizer-docs.git document-normalizer-docs-preview
-          git clone --depth 1 --branch preview https://github.com/dynamsoft-docs/Docs-Template-Repo.git Docs-Template-Repo-Preview
-          cp -rfp ./document-normalizer-docs-preview/* ./DDNDocPreview/
-          cp -rfp ./Docs-Template-Repo-Preview/* ./DDNDocPreview/
-          sed -i -e "1,3s/blob\/master$/blob\/preview/" \
-          -e "1,3s/blob\/main$/blob\/preview/" /home/ubuntu/DDNDocPreview/_config.yml
-          cd DDNDocPreview && bundle install && bundle exec jekyll build
-
-      - name: Sync files
-        uses: SamKirkland/FTP-Deploy-Action@4.3.0
-        with:
-          server: ${{ secrets.FTP_TEST_SITE_SERVER }}
-          username: ${{ secrets.FTP_TEST_SITE_USER }}
-          password: ${{ secrets.FTP_TEST_SITE_PASSWORD }}
-          port: 7500 
-          local-dir: /home/ubuntu/DDNDocPreview/_site/
-          server-dir: /www.dynamsoft.com/document-normalizer/docs/core/
-
-          
+    uses: dynamsoft-docs/Docs-Template-Repo/.github/workflows/called-workflow-build-sync-testing.yml@preview
+    with:
+      doc-repo: document-normalizer-docs
+      doc-url: document-normalizer/docs/core
+    secrets: inherit
