--- a/_data/product_version.yml
+++ b/_data/product_version.yml
@@ -1,9 +1,10 @@
 useGroupedVersion: true
 
 version_info_list:
-  - value: latest version
+  - value: latest version(2.2.10)
   - value: 2.x
     child:
+      - 2.2.0
       - 2.0.21
       - 2.0.20
       - 2.0.11
