update archive branch

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
   push:
     branches: 
     - main 
-    #- preview 
+    - archive 
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -30,4 +30,12 @@ jobs:
     with:
       doc-repo: document-normalizer-docs
       doc-url: document-normalizer/docs/core
+    secrets: inherit
+
+  Build-Archive:
+    if: ${{ github.ref == 'refs/heads/archive' }}
+    uses: dynamsoft-docs/Docs-Template-Repo/.github/workflows/called-workflow-build-sync-archive.yml@archive
+    with:
+      doc-repo: document-normalizer-docs
+      doc-url: document-normalizer/docs-archive/core
     secrets: inherit
