--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,3 +31,12 @@ jobs:
       doc-repo: document-normalizer-docs
       doc-url: document-normalizer/docs/core
     secrets: inherit
+
+  Build-v2:
+    if: ${{ github.ref == 'refs/heads/v2' }}
+    uses: dynamsoft-docs/Docs-Template-Repo/.github/workflows/called-workflow-build-sync-production.yml@DCV-v2
+    with:
+      doc-repo: document-normalizer-docs
+      doc-url: document-normalizer/docs/v2/core
+      doc-branch: v2
+    secrets: inherit
