update to internal commit a31c9625

--- a/_config.yml
+++ b/_config.yml
@@ -3,42 +3,15 @@ repositoryUrl: https://github.com/dynamsoft-docs/document-normalizer-docs/blob/m
 docFullPath: https://www.dynamsoft.com/document-normalizer/docs/core
 firstLevelUrl: /document-normalizer/docs/core
 docHomePage: /document-normalizer/docs/core/
+needSearchIndex: true
+searchNeedFilter: true
 
 introduction: /document-normalizer/docs/core/introduction/
 
-c: /document-normalizer/docs/server/programming/c/
-c_api: /document-normalizer/docs/server/programming/c/api-reference/
-c_release_notes: /document-normalizer/docs/server/programming/c/release-notes/
-
-cpp: /document-normalizer/docs/server/programming/cplusplus/
-cpp_release_notes: /document-normalizer/docs/server/programming/cplusplus/release-notes/
-
-dotnet: /document-normalizer/docs/server/programming/dotnet/
-dotnet_release_notes: /document-normalizer/docs/server/programming/dotnet/release-notes/
-
-ios: /document-normalizer/docs/mobile/programming/ios/
-ios_release_notes: /document-normalizer/docs/mobile/programming/ios/release-notes/
-
-android: /document-normalizer/docs/mobile/programming/android/
-android_release_notes: /document-normalizer/docs/mobile/programming/android/release-notes/
-
-js: /document-normalizer/docs/web/programming/javascript/
-js_release_notes: /document-normalizer/docs/web/programming/javascript/release-notes/
-
-xamarin: /document-normalizer/docs/mobile/programming/xamarin/
-xamarin_release_notes: /document-normalizer/docs/mobile/programming/xamarin/release-notes/
-
-release_notes: /document-normalizer/docs/core/release-notes/
-
-enumerations: /capture-vision/docs/core/enums/
-dcv_parameters: /capture-vision/docs/core/parameters/
-parameters_reference: /capture-vision/docs/core/parameters/reference/
-parameters_ddn: /document-normalizer/docs/core/parameters/
-parameters_reference_ddn: /document-normalizer/docs/core/parameters/reference/
-license: /document-normalizer/docs/core/license-activation/
 
 useVersionTree: false
 isDCV: true
+useJSVersionV3: true
 
 assets: /document-normalizer/docs/core/assets/
 edit_icon: /document-normalizer/docs/core/assets/img-icon/edit-icon.png
